cups (1.3.9-10) UNRELEASED; urgency=low

  * debian/local/filters/cpdftocps: Made correct number of copies being
    printed on PostScript printers with hardware copy handling (LP: #286048).

 -- Till Kamppeter <till.kamppeter@gmail.com>  Thu, 11 Dec 2008 10:20:57 -0800

cups (1.3.9-9) experimental; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/pdftopdf/P2PPage.cxx,
    debian/local/filters/pdf-filters/pdftopdf/P2PResources.cxx: Added
    processing of the rotate tag (LP: #300312).

  [ Martin Pitt ]
  * Add png-image-int-overflow.dpatch: Fix integer overflow in the PNG image
    reader (Closes: #507183, STR #2974, CVE-2008-5286)

 -- Martin Pitt <mpitt@debian.org>  Mon, 01 Dec 2008 15:47:10 -0800

cups (1.3.9-8) experimental; urgency=low

  * debian/local/filters/pdf-filters/pdftopdf/P2POutputStream.cxx,
    debian/local/filters/pdf-filters/pdftopdf/P2POutputStream.h: Removed
    an endianess dependency from the pdftopdf filter, so that it also
    works on non-PC platforms like PowerPC (LP: #271350). This also fixes the
    filter on mipsel and makes the test suite, and thus the build, succeed
    again. (Closes: #500305)
  * debian/filters/pstopdf: Do not supply the margins from the PPD to the
    ps2pdf process, as this breaks full-bleed printing and is also disturbs 
    the printing if PPDs have too conservative margin definitions (LP: #282186).

 -- Till Kamppeter <till.kamppeter@gmail.com>  Wed, 26 Nov 2008 15:14:57 +0100

cups (1.3.9-7) experimental; urgency=low

  * Previous upload had some cruft in the diff.gz which caused some changed
    defaults in cupsd.conf. Reupload with a clean diff.gz. *Brown paperbag*

 -- Martin Pitt <mpitt@debian.org>  Thu, 20 Nov 2008 18:49:46 +0100

cups (1.3.9-6) experimental; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/cpdftocps: The cpdftocps filter did case-sensitive
    checking for CUPS options to keep them away from the pstops filter. CUPS