@@ -302,6 +302,15 @@ void P2PPageTree::scale(double zoom)
   }
 }
 
+void P2PPageTree::autoRotate(PDFRectangle *box)
+{
+  int i;
+
+  for (i = 0;i < numPages;i++) {
+    pages[i]->autoRotate(box);
+  }
+}
+
 void P2PPageTree::setMediaBox(PDFRectangle *mediaBoxA)
 {
   int i;
