@@ -55,6 +55,7 @@ public:
   void rotate(int orientation);
   void position(PDFRectangle *box, int xpos, int ypos);
   void scale(double zoom);
+  void autoRotate(PDFRectangle *box);
   void setMediaBox(PDFRectangle *mediaBoxA);
   int getNumberOfPages() { return numPages; }
 private:
