@@ -1,5 +1,17 @@
 cups (1.3.9-10) UNRELEASED; urgency=low
 
+  * debian/local/filters/pdf-filters/pdftopdf/P2PCatalog.cxx,
+    debian/local/filters/pdf-filters/pdftopdf/P2PCatalog.h,
+    debian/local/filters/pdf-filters/pdftopdf/P2PDoc.cxx,
+    debian/local/filters/pdf-filters/pdftopdf/P2PDoc.h,
+    debian/local/filters/pdf-filters/pdftopdf/P2PPage.cxx,
+    debian/local/filters/pdf-filters/pdftopdf/P2PPage.h,
+    debian/local/filters/pdf-filters/pdftopdf/P2PPageTree.cxx,
+    debian/local/filters/pdf-filters/pdftopdf/P2PPageTree.h,
+    debian/local/filters/pdf-filters/pdftopdf/pdftopdf.cxx: Fixed problem
+    of Landscape-oriented PDF files being printed in the wrong orientation
+    (LP: #47649, LP: #244840).
+
   * debian/local/filters/cpdftocps: Made correct number of copies being
     printed on PostScript printers with hardware copy handling (LP: #286048).
 
